ingress/ingres-adv/egress-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: egress-svc
  namespace: development
spec:
  type: ExternalName
  externalName: test-sparks-sites.aahg.ot
