ingress/ingres-adv/egress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: egress
  namespace: development
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - egress.dev.aahg.ot
    secretName: dev-ssl
  rules:
  - host: egress.dev.aahg.ot
    http:
      paths:
      - path: /
        backend:
          serviceName: egress-svc
          servicePort: 80
