ingress/ingres-adv/forwarder.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: forwarder
  namespace: acceptatie
  annotations:
    # Ingress controller for service external traffic
    kubernetes.io/ingress.class: " "

    # IP whitelisting
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.234.0.0/16,192.168.0.0/16,87.213.32.38
    nginx.ingress.kubernetes.io/upstream-vhost: "berichten-legacy.dci.aah.acc"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - forewarder.acc
    secretName: forwarder-ssl
  rules:
  - host: forwarder.acc
    http:
      paths:
      - path: /echo
        backend:
          serviceName: ssldemo-svc
          servicePort: http-ssldemo
      - path: /berichten.legacy(/|$)(.*)
        backend:
          serviceName: fwd-berichtenlegacy-svc
          servicePort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: fwd-berichtenlegacy-svc
  namespace: acceptatie
spec:
  type: ExternalName
  externalName: berichten-legacy.dci.aah.acc
